[gd_scene load_steps=12 format=3 uid="uid://c8lj4bah1i8a0"]

[ext_resource type="Script" path="res://Scripts/cybersecurity.gd" id="1_nk4c3"]
[ext_resource type="Texture2D" uid="uid://bin4uo2v4kia" path="res://Resources/tick.png" id="2_cwxqi"]
[ext_resource type="Texture2D" uid="uid://clmphe0muk7er" path="res://Resources/trophy.webp" id="3_1b5o4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_33p10"]

[sub_resource type="LabelSettings" id="LabelSettings_3n2uj"]
font_size = 37

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17w3g"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.464698, 0.624332, 0.727236, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_70giw"]
font_size = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5d7ma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixkio"]
bg_color = Color(0.62, 0.603467, 0.558, 0.227451)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu5lv"]
bg_color = Color(0.351929, 0.606554, 0.937459, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfwal"]

[node name="CyberSecurity" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nk4c3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 76

[node name="TitleHContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 34

[node name="BackBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_33p10")

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 21.6
text = "Cyber Security (Mission Progress)
"
label_settings = SubResource("LabelSettings_3n2uj")

[node name="LevelsHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 55

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_17w3g")

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Level 1
"

[node name="Tick" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer"]
z_index = 1
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_cwxqi")
expand_mode = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_17w3g")

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 2
"

[node name="Tick" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer2"]
z_index = 1
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_cwxqi")
expand_mode = 1

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox"]
modulate = Color(0.5, 0.5, 0.5, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_17w3g")

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 3
"

[node name="Tick" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer3"]
visible = false
z_index = 1
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_cwxqi")
expand_mode = 1

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox"]
modulate = Color(0.5, 0.5, 0.5, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_17w3g")

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 4
"

[node name="Tick" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer4"]
visible = false
z_index = 1
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_cwxqi")
expand_mode = 1

[node name="PanelContainer5" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox"]
modulate = Color(0.5, 0.5, 0.5, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_17w3g")

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 5
"

[node name="Tick" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/LevelsHBox/PanelContainer5"]
visible = false
z_index = 1
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_cwxqi")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="MetricHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MetricHBox"]
layout_mode = 2
text = "Badge Completion"
label_settings = SubResource("LabelSettings_70giw")

[node name="HSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MetricHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_5d7ma")

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MetricHBox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 11.54
theme_override_styles/background = SubResource("StyleBoxFlat_ixkio")
theme_override_styles/fill = SubResource("StyleBoxFlat_fu5lv")
value = 40.0
show_percentage = false

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MetricHBox"]
layout_mode = 2
text = "40%"
label_settings = SubResource("LabelSettings_70giw")

[node name="Achievements" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Achievements"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tfwal")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Achievements/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_1b5o4")
expand_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Achievements"]
layout_mode = 2
size_flags_horizontal = 10
text = "Achievements"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TitleHContainer/BackBtn" to="." method="_on_back_btn_pressed"]
